added tests for kryo serializers